# phonebook-ng

./: .gitignore  Cargo.toml  README.md
src/: exporter.rs  loader.rs  main.rs  sysinfo.rs
